звук, + норм сообщение, и ещё удалил мессенджер